--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,12 +46,25 @@ android {
         versionName flutterVersionName
         multiDexEnabled true
     }
-
+    signingConfigs {
+        debug {
+            storeFile file('../rdtcam.jks')
+            storePassword 'm4m1g0'
+            keyAlias = 'iprd'
+            keyPassword 'm4m1g0'
+        }
+        release {
+            storeFile file('../rdtcam.jks')
+            storePassword 'm4m1g0'
+            keyAlias = 'iprd'
+            keyPassword 'm4m1g0'
+        }
+    }
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
