--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  path_provider: ^0.4.1
+  crypto: any
+  simple_rsa: ^0.0.5
+
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +71,8 @@ flutter:
   assets:
     - assets/logo.png
     - assets/google_logo.png
+    - assets/private_key_info.key
+    - assets/public_key_info.key
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
