--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,11 +43,13 @@ dependencies:
   #QR
   qr_code_scanner: ^0.3.0
   qr_flutter: ^3.1.0
+  screenshot: ^0.2.0
+  share: ^0.6.5+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  path_provider: ^0.4.1
+  path_provider: ^1.1.0
   crypto: any
   simple_rsa: ^0.0.5
 
