--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -32,7 +32,7 @@ jobs:
     - run: flutter build apk
     
     # Upload generated apk to the artifacts.
-      uses: actions/upload-artifact@main
+    - uses: actions/upload-artifact@main
       with:
         name: apk-release
         path: build/app/outputs/bundle/release/app-release.apk
