--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -28,10 +28,9 @@ jobs:
     # Run widget tests for our flutter project.
     - run: flutter test
     - run: |
-        mkdir $HOME/private
         gpg --quiet --batch --yes --decrypt --passphrase="$FIREBASE_SECRET" \
-        --output $HOME/private/services.tar services.tar.gpg
-        tar xvf $HOME/private/services.tar
+        --output services.tar services.tar.gpg
+        tar xvf services.tar
         flutter build appbundle
       env:
         FIREBASE_SECRET: ${{ secrets.FIREBASE_SECRET }}
